# poetry2nix_override_bruteforcer

./: .gitignore  01_assemble_package_list.py  01_build_packages.py  02_build_packages.py  02_stats.py  03_detect_scm_versioning.py  03_random_failure.py  03_stats.py  04_assemble.py  05_assemble.py  Readme.md  aioeafm.pkl  clear_failures.py  flake.nix  input.json  pyproject.toml  random_failure.py  remove_and_rebuild.py  shared.py  show_last_round.py  sweep.py
autodetected/needs_scm/: extension-helpers.json  facedancer.json  fideslang.json  numkit.json  recline.json  riot.json  tox-docker.json  unknown.json  zigpy.json  (+1 more)
dev/: treefmt.nix
input/: assemble_list.py  constraints.toml  fetch_all_pypi_packages.py  known_312_errors.json  known_infinite_recursion.toml  known_maconly.toml  known_other_errors.json  known_poetry_errors.json  known_py2_only.json  known_pypi_errors.json  much_needed.json  nixpkgs.json  other_packages.json  packages.json  stdlib.json  tp_packages.json
manual_overrides/: aardwolf.nix  adapt-parser.nix  anybadge.nix  artellapipe-config.nix  atari-py.nix  autocommand.nix  bareutils.nix  based58.nix  blosc2.json  bob-blitz.nix  box2d.nix  cairocffi.nix  canmatrix.nix  casadi.nix  char.nix  click-spinner.nix  cloudsmith-cli.nix  clvm-rs.nix  confluent_kafka.nix  cramjam.nix  css-inline.nix  cvxopt.nix  cypari.sh  dask-gateway.nix  databroker.nix  datafusion.nix  datasketches.nix  dawg.nix  django-crum.nix  django-feed-reader.nix  dm-tree.nix  fastparquet.nix  flask-collect-invenio.nix  forecast-solar.nix  g4f.nix  galaxy-fds-sdk.nix  gdal.nix  glpk.nix  gmpy2.nix  h3.nix  (+85 more)
poetry2nix-ready-files/: auto-build_systems.json  auto-overrides.nix
templates/: flake.nix  overrides.nix  pyproject.toml
(+17617 files in other folders)
