[tool.poetry]
name = "poetry2nix-bigtest"
version = "0.1.0"
description = "Test a lot of python package builds"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypipegraph2 = {git = "https://github.com/TyberiusPrime/pypipegraph2"}
poetry = "^1.8.3"
psutil = "^6.0.0"
packaging = "^24.1"
setuptools = "^70.3.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
